@@ -108,6 +108,18 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            -Dnet.bytebuddy.experimental=true
+            --add-opens java.compiler/javax.annotation.processing=ALL-UNNAMED
+            --add-opens java.compiler/javax.lang.model.element=ALL-UNNAMED
+            --add-opens java.compiler/javax.tools=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <annotationProcessorPaths>
